# cinematic-editor-workspace

./: README.md  cinematic_editor_setup.py
.github/workflows/: build.yml
cinematic_editor/: .gitignore  BUILD_CHECKLIST.md  CONFIGURATION_GUIDE.md  GITHUB_ACTIONS_GUIDE.md  INDEX.md  PLACEHOLDERS_QUICK_REFERENCE.md  PROJECT_SETUP_SUMMARY.md  README.md  SETUP_COMPLETE_SUMMARY.md  build_release.sh  pubspec.yaml  run_backend.sh  setup_env.sh
cinematic_editor/.github/workflows/: build.yml
cinematic_editor/android/app/: build.gradle
cinematic_editor/assets/fonts/: FONTS_README.txt
cinematic_editor/assets/models/: MODELS_README.txt
cinematic_editor/backend/: .env.example  requirements.txt
cinematic_editor/backend/app/: main.py
cinematic_editor/backend/app/api/routes/: ai_routes.py  auth_routes.py  video_routes.py
cinematic_editor/backend/app/core/: config.py  security.py
cinematic_editor/lib/: main.dart
cinematic_editor/lib/core/models/: timeline_models.dart
cinematic_editor/lib/features/export/models/: export_models.dart
cinematic_editor/lib/features/export/services/: export_service.dart  ffmpeg_executor.dart
cinematic_editor/lib/shared/constants/: app_constants.dart
cinematic_editor/lib/shared/theme/: app_colors.dart  app_theme.dart
cinematic_editor/native/cpp/: CMakeLists.txt
cinematic_editor/native/cpp/engine/include/: cinematic_engine.h
cinematic_editor/native/cpp/engine/src/: cinematic_engine.cpp
cinematic_editor/native/cpp/ffmpeg_bridge/include/: ffmpeg_wrapper.h
cinematic_editor/native/cpp/ffmpeg_bridge/src/: ffmpeg_wrapper.cpp
(+2 files in other folders)
